[gd_scene load_steps=22 format=3 uid="uid://bnss1urf5ebkf"]

[ext_resource type="PackedScene" uid="uid://bwdy1bhcexh7f" path="res://scenes/sidebar.tscn" id="1_84egq"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_kgh5u"]
[ext_resource type="FontFile" uid="uid://bknsc4se0l6km" path="res://assets/Roboto Mono/static/RobotoMono-BoldItalic.ttf" id="3_e24tt"]
[ext_resource type="Script" path="res://scripts/get_exoplanet_name.gd" id="4_jb8p2"]
[ext_resource type="Script" path="res://scripts/planet_info.gd" id="5_2mgws"]
[ext_resource type="Script" path="res://scripts/fov_slider.gd" id="5_tde2r"]
[ext_resource type="FontFile" uid="uid://camklexcy7633" path="res://assets/Roboto Mono/static/RobotoMono-SemiBold.ttf" id="5_ynn1k"]
[ext_resource type="FontFile" uid="uid://clxqqlkx8c5mu" path="res://assets/Roboto Mono/static/RobotoMono-Light.ttf" id="7_5pymp"]
[ext_resource type="Script" path="res://scripts/constelation_editor.gd" id="7_x2pmn"]
[ext_resource type="FontFile" uid="uid://c2x5ex4wwhhg0" path="res://assets/Roboto Mono/static/RobotoMono-Medium.ttf" id="8_n4so4"]
[ext_resource type="FontFile" uid="uid://bt6x8esh5m0ca" path="res://assets/Roboto Mono/static/RobotoMono-Regular.ttf" id="10_gfv2q"]
[ext_resource type="FontFile" uid="uid://dy5xvgxsl6fii" path="res://assets/Roboto Mono/static/RobotoMono-Bold.ttf" id="12_1mhjs"]

[sub_resource type="LabelSettings" id="LabelSettings_o828k"]
font = ExtResource("3_e24tt")
font_size = 32

[sub_resource type="GDScript" id="GDScript_ht13s"]

[sub_resource type="Theme" id="Theme_7s5nk"]
script = SubResource("GDScript_ht13s")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnglk"]
bg_color = Color(0.635294, 0.682353, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tp8xg"]
bg_color = Color(0.635294, 0.682353, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yy8dj"]
bg_color = Color(0.598786, 0.58455, 0.698526, 0.686275)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggnsk"]
bg_color = Color(0.439216, 0.188235, 0.988235, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ls1m"]
bg_color = Color(0.533333, 0.427451, 0.996078, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eiewb"]
bg_color = Color(0.635294, 0.682353, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 3.769
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.31226
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgh5u")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" parent="." instance=ExtResource("1_84egq")]
layout_mode = 0
offset_top = 76.0
offset_bottom = 899.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.341
anchor_right = 0.77
anchor_bottom = 0.03
offset_left = -0.699036
offset_top = 5.0
offset_right = -0.0300293
offset_bottom = -0.640572
theme_override_font_sizes/font_size = 50
text = "Current exoplanet: Null"
label_settings = SubResource("LabelSettings_o828k")
horizontal_alignment = 1
script = ExtResource("4_jb8p2")

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.011
offset_left = 345.0
offset_top = 748.0
offset_right = 1395.0
offset_bottom = 844.732
theme = SubResource("Theme_7s5nk")
theme_override_fonts/font = ExtResource("5_ynn1k")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_fnglk")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_2mgws")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 22.0
offset_right = 300.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("7_5pymp")
theme_override_styles/normal = SubResource("StyleBoxFlat_tp8xg")
placeholder_text = " Search"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 18.0
offset_right = 347.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("8_n4so4")
text = "Hide"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 39.0
offset_right = 348.0
offset_bottom = 63.0

[node name="VSlider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 1360.0
offset_top = 22.0
offset_right = 1424.0
offset_bottom = 718.0
script = ExtResource("5_tde2r")

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_x2pmn")

[node name="Label" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 1060.0
offset_top = 700.0
offset_right = 1253.0
offset_bottom = 723.0
theme_override_fonts/font = ExtResource("10_gfv2q")
text = "Constellation Editor"

[node name="CheckButton" type="CheckButton" parent="Control2"]
layout_mode = 0
offset_left = 1249.0
offset_top = 700.0
offset_right = 1293.0
offset_bottom = 724.0

[node name="LineEdit" type="LineEdit" parent="Control2"]
visible = false
layout_mode = 0
offset_left = 571.0
offset_top = 408.0
offset_right = 853.0
offset_bottom = 439.0
theme_override_styles/normal = SubResource("StyleBoxFlat_yy8dj")
placeholder_text = "Name..."

[node name="Button" type="Button" parent="Control2"]
visible = false
layout_mode = 0
offset_left = 944.0
offset_top = 694.0
offset_right = 1050.0
offset_bottom = 728.0
theme_override_fonts/font = ExtResource("12_1mhjs")
theme_override_styles/hover = SubResource("StyleBoxFlat_ggnsk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ls1m")
theme_override_styles/normal = SubResource("StyleBoxFlat_eiewb")
disabled = true
text = "Complete"

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="drag_ended" from="VSlider" to="VSlider" method="_on_drag_ended"]
[connection signal="drag_started" from="VSlider" to="VSlider" method="_on_drag_started"]
[connection signal="toggled" from="Control2/CheckButton" to="Control2" method="_on_toggled"]
[connection signal="text_submitted" from="Control2/LineEdit" to="Control2" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Control2/Button" to="Control2" method="_on_button_pressed"]
